package com.learn.service.media;

import org.springframework.data.repository.CrudRepository;

public interface MediaRepository extends CrudRepository<MediaEntity, Integer> {
}
